# udp_thermometer

./: Cargo.toml  readme.md
src/: lib.rs  main.rs  transmitter.rs  udp_connection.rs
